################################################################################
# Meson file
################################################################################

################################################################################
# Install

install_data(['org.free_astro.siril.appdata.xml'
              ,'siril.xml'
              ,'org.free_astro.siril.desktop'],
             rename : ['metainfo/org.free_astro.siril.appdata.xml'
                      ,'mime/packages/siril.xml'
                      ,'applications/org.free_astro.siril.desktop'],
             install_dir : siril_share)