################################################################################
# Meson file
################################################################################

################################################################################
# Compile resource file

win_res += winm.compile_resources('siril.rc', depend_files: ['siril.ico', 'text-x-seq.ico'])